# plurigrid

./: .gitignore  .jupyter_ystore.db  Dockerfile  LICENSE  README.md  docker-compose-crdt.yml  entrypoint.sh  justfile  pyproject.toml  shell.nix  start_plurigrid.sh
.github/workflows/: docker_build.yml
plurigrid/: arena.py  juypter.md  log.md
plurigrid/agent/: __main__.py
plurigrid/agent/agents/: baby_agi.py  base_agent.py  plurigrid.py
plurigrid/agent/models/: index_model.py
plurigrid/agent/utils/: cosmos.py
plurigrid/crdt/: Dockerfile  build.md  mock_device.py  test_ypycrdt.py
plurigrid/ontology/: arena_history.json  arena_history_1681272812.013325.json  hardware_presentation.md  kg.json  outline.md  script.md  vec.json
scripts/: auto_docker.sh  chatorg_scraper.py  chroma.py  flow_sync.py  gm.sh  install_docker.sh  merge_agent.sh  nix_install.sh  play.sh  qa.py  start_plurigrid.sh  vec.py  wandb_artifact.py
scripts/worlding/bash/: reworld.sh
scripts/worlding/scheme/: reworld.scm  unworld.scm
webRTC/: client.js  index.html  package-lock.json  package.json  server.js
