[tool.poetry]
name = "gridagi"
version = "0.0.0"
description = "fruitloop"
authors = ["Barton Rhodes <barton@plurigrid.art>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
pinecone-client = "^2.2.1"
llama-index = "^0.5.10"
ipython = "^8.12.0"
chromadb = "^0.3.21"
pandas = "^2.0.0"
langchain = "^0.0.135"
wandb = "^0.14.2"
bs4 = "^0.0.1"
selenium = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
