[tool.poetry]
name = "plurigrid"
version = "0.0.0"
description = "fruitloop"
authors = ["Barton Rhodes <barton@plurigrid.art>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.2"
pinecone-client = "^2.2.1"
llama-index = "^0.5.10"
chromadb = "^0.3.21"
langchain = "^0.0.135"
wandb = "^0.14.2"
chatarena = "^0.1.7"
pettingzoo = "^1.22.3"
chess = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
