[tool.poetry]
name = "plurigrid"
version = "0.0.0"
description = "fruitloop"
authors = ["Plurigrid <gm@plurigrid.xyz>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.2"
pinecone-client = "^2.2.1"
llama-index = "^0.5.10"
chromadb = "^0.3.21"
langchain = "^0.0.135"
wandb = "^0.14.2"
chatarena = "^0.1.7"
pettingzoo = "^1.22.3"
chess = "^1.9.4"
pypdf2 = "^3.0.1"
unstructured = "^0.4.11"
transformers = "^4.26.1"
gradio = "^3.19.1"
duckdb = "^0.7.0"
slugify = "^0.0.1"
clang = "^14.0"
argparse = "^1.4.0"
discord = "^2.2.2"
pygithub = "^1.58.1"
torch = "^2.0.0"
sentencepiece = "^0.1.97"
zulip = "^0.8.2"
ipython = "^8.12.0"
pytube = "^12.1.3"
playwright = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
